--- a/SistemaDePuntos/src/sistemadepuntos/frmMenuPrincipal.form
+++ b/SistemaDePuntos/src/sistemadepuntos/frmMenuPrincipal.form
@@ -138,7 +138,7 @@
     <Component class="javax.swing.JLabel" name="jLabelFondoMenuPrincipal">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/imgenesProyecto/fondo4.jpg"/>
+          <Image iconType="3" name="/imgenesProyecto/fondo-menuPrincial.jpg"/>
         </Property>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[680, 530]"/>
