Modificacion de frmRegistroClientes
Cambio de nombres de los componentes

--- a/SistemaDePuntos/src/sistemadepuntos/frmRegistroClientes.form
+++ b/SistemaDePuntos/src/sistemadepuntos/frmRegistroClientes.form
@@ -27,18 +27,18 @@
               <EmptySpace min="-2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
-                      <Component id="jPanel2_DatosCliente" max="32767" attributes="0"/>
+                      <Component id="jP2_DatosCliente" max="32767" attributes="0"/>
                       <EmptySpace min="-2" pref="132" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="jPanel_Botones" alignment="1" max="32767" attributes="0"/>
-                  <Component id="jLabel2" alignment="0" max="32767" attributes="0"/>
-                  <Component id="Direccion" alignment="0" max="32767" attributes="0"/>
+                  <Component id="j_Botones" alignment="1" max="32767" attributes="0"/>
+                  <Component id="jL_etiquetaPrincipla" alignment="0" max="32767" attributes="0"/>
+                  <Component id="jP_DatosDireccion" alignment="0" max="32767" attributes="0"/>
                   <Group type="102" attributes="0">
                       <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                       <Component id="jSeparator1" min="-2" pref="378" max="-2" attributes="0"/>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
-                  <Component id="jPanel1_DatosCliente" alignment="0" max="32767" attributes="0"/>
+                  <Component id="jP1_DatosCliente" alignment="0" max="32767" attributes="0"/>
               </Group>
           </Group>
       </Group>
@@ -47,24 +47,24 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
-              <Component id="jLabel2" min="-2" pref="23" max="-2" attributes="0"/>
+              <Component id="jL_etiquetaPrincipla" min="-2" pref="23" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jPanel1_DatosCliente" min="-2" max="-2" attributes="0"/>
+              <Component id="jP1_DatosCliente" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jPanel2_DatosCliente" min="-2" max="-2" attributes="0"/>
+              <Component id="jP2_DatosCliente" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="Direccion" min="-2" max="-2" attributes="0"/>
+              <Component id="jP_DatosDireccion" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jSeparator1" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jPanel_Botones" min="-2" max="-2" attributes="0"/>
+              <Component id="j_Botones" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JLabel" name="jLabel2">
+    <Component class="javax.swing.JLabel" name="jL_etiquetaPrincipla">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="16" style="0"/>
@@ -78,7 +78,7 @@
         </Property>
       </Properties>
     </Component>
-    <Container class="javax.swing.JPanel" name="jPanel1_DatosCliente">
+    <Container class="javax.swing.JPanel" name="jP1_DatosCliente">
 
       <Layout>
         <DimensionLayout dim="0">
@@ -256,7 +256,7 @@
         </Component>
       </SubComponents>
     </Container>
-    <Container class="javax.swing.JPanel" name="jPanel2_DatosCliente">
+    <Container class="javax.swing.JPanel" name="jP2_DatosCliente">
 
       <Layout>
         <DimensionLayout dim="0">
@@ -264,13 +264,13 @@
               <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="Sexo" max="32767" attributes="0"/>
-                      <Component id="jLabel1" max="32767" attributes="0"/>
+                      <Component id="jL_Sexo" max="32767" attributes="0"/>
+                      <Component id="jL_fechaNacimiento" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="sexo" min="-2" pref="51" max="-2" attributes="0"/>
-                      <Component id="jDateChooser1" min="-2" pref="126" max="-2" attributes="0"/>
+                      <Component id="jC_Sexo" min="-2" pref="51" max="-2" attributes="0"/>
+                      <Component id="jDC_fechaNacimiento" min="-2" pref="126" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
@@ -280,20 +280,20 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="Sexo" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="sexo" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jL_Sexo" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jC_Sexo" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
-                      <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                      <Component id="jDateChooser1" min="-2" max="-2" attributes="0"/>
+                      <Component id="jL_fechaNacimiento" min="-2" max="-2" attributes="0"/>
+                      <Component id="jDC_fechaNacimiento" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
           </Group>
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JLabel" name="Sexo">
+        <Component class="javax.swing.JLabel" name="jL_Sexo">
           <Properties>
             <Property name="text" type="java.lang.String" value="Sexo:"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
@@ -303,7 +303,7 @@
             </Property>
           </Properties>
         </Component>
-        <Component class="javax.swing.JComboBox" name="sexo">
+        <Component class="javax.swing.JComboBox" name="jC_Sexo">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="2">
@@ -321,7 +321,7 @@
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JLabel" name="jLabel1">
+        <Component class="javax.swing.JLabel" name="jL_fechaNacimiento">
           <Properties>
             <Property name="text" type="java.lang.String" value="Fecha nacimiento dd-mm-yy :"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
@@ -331,11 +331,11 @@
             </Property>
           </Properties>
         </Component>
-        <Component class="com.toedter.calendar.JDateChooser" name="jDateChooser1">
+        <Component class="com.toedter.calendar.JDateChooser" name="jDC_fechaNacimiento">
         </Component>
       </SubComponents>
     </Container>
-    <Container class="javax.swing.JPanel" name="Direccion">
+    <Container class="javax.swing.JPanel" name="jP_DatosDireccion">
 
       <Layout>
         <DimensionLayout dim="0">
@@ -343,17 +343,17 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="TituloDireccion" max="32767" attributes="0"/>
+                      <Component id="jL_TituloDireccion" max="32767" attributes="0"/>
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="Descripcion" pref="76" max="32767" attributes="0"/>
-                              <Component id="jLabel3" max="32767" attributes="0"/>
+                              <Component id="jL_DetalleDirecion" pref="76" max="32767" attributes="0"/>
+                              <Component id="jL_Zona" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="jScrollPane1" max="32767" attributes="0"/>
                               <Group type="102" attributes="0">
-                                  <Component id="jComboBox1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jC_zona" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                               </Group>
                           </Group>
@@ -366,15 +366,15 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <Component id="TituloDireccion" min="-2" max="-2" attributes="0"/>
+                  <Component id="jL_TituloDireccion" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jComboBox1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jL_Zona" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jC_zona" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="Descripcion" min="-2" max="-2" attributes="0"/>
+                      <Component id="jL_DetalleDirecion" min="-2" max="-2" attributes="0"/>
                       <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -382,7 +382,7 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JLabel" name="TituloDireccion">
+        <Component class="javax.swing.JLabel" name="jL_TituloDireccion">
           <Properties>
             <Property name="horizontalAlignment" type="int" value="0"/>
             <Property name="text" type="java.lang.String" value="Direcci&#xf3;n"/>
@@ -394,7 +394,7 @@
             <Property name="horizontalTextPosition" type="int" value="0"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="Descripcion">
+        <Component class="javax.swing.JLabel" name="jL_DetalleDirecion">
           <Properties>
             <Property name="text" type="java.lang.String" value="Detalle:"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
@@ -419,7 +419,7 @@
             </Component>
           </SubComponents>
         </Container>
-        <Component class="javax.swing.JLabel" name="jLabel3">
+        <Component class="javax.swing.JLabel" name="jL_Zona">
           <Properties>
             <Property name="text" type="java.lang.String" value="Zona:"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
@@ -429,7 +429,7 @@
             </Property>
           </Properties>
         </Component>
-        <Component class="javax.swing.JComboBox" name="jComboBox1">
+        <Component class="javax.swing.JComboBox" name="jC_zona">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="1">
@@ -445,17 +445,17 @@
     </Container>
     <Component class="javax.swing.JSeparator" name="jSeparator1">
     </Component>
-    <Container class="javax.swing.JPanel" name="jPanel_Botones">
+    <Container class="javax.swing.JPanel" name="j_Botones">
 
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="btn_guardar" min="-2" pref="100" max="-2" attributes="0"/>
+                  <Component id="btn_guardarCliente" min="-2" pref="100" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
-                  <Component id="btn_cancelar" min="-2" pref="100" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
+                  <Component id="btn_editarCliente" min="-2" pref="100" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
                   <Component id="btn_menuInicio" min="-2" pref="100" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -466,16 +466,16 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="btn_guardar" pref="25" max="32767" attributes="0"/>
+                      <Component id="btn_guardarCliente" pref="25" max="32767" attributes="0"/>
+                      <Component id="btn_editarCliente" alignment="0" max="32767" attributes="0"/>
                       <Component id="btn_menuInicio" alignment="0" max="32767" attributes="0"/>
-                      <Component id="btn_cancelar" alignment="0" max="32767" attributes="0"/>
                   </Group>
               </Group>
           </Group>
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JButton" name="btn_guardar">
+        <Component class="javax.swing.JButton" name="btn_guardarCliente">
           <Properties>
             <Property name="text" type="java.lang.String" value="Guardar"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
@@ -485,18 +485,21 @@
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_guardarActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_guardarClienteActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="btn_cancelar">
+        <Component class="javax.swing.JButton" name="btn_editarCliente">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Cancelar"/>
+            <Property name="text" type="java.lang.String" value="Editar"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
                 <LineBorder/>
               </Border>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_editarClienteActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btn_menuInicio">
           <Properties>
